src/assets/styles/partials/theme.scss
/*
	Dopetrope by HTML5 UP
	html5up.net | @ajlkn
	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

body {
  line-height: 1;
  background-color: var(--light-color);
  overflow-x: hidden;
  width: 100%;
  height: 100%;
  font-weight: 400;
  overflow-x: hidden;
  overscroll-behavior: none;
  overscroll-behavior-y: contain;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
}

ol,
ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

body {
  -webkit-text-size-adjust: none;
}

mark {
  background-color: transparent;
  color: inherit;
}

input::-moz-focus-inner {
  border: 0;
  padding: 0;
}

input,
select,
textarea {
  -moz-appearance: none;
  -webkit-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

/* Basic */

html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body,
input,
textarea,
select {
  font-family: 'Source Sans Pro';
  font-weight: 300;
  color: var(--text-color);
  font-size: 14pt;
  line-height: 1.75em;
}

strong,
b {
  color: var(--dark-color);
  font-weight: 400;
}

i,
em {
  font-style: italic;
}

sub {
  position: relative;
  top: 0.5em;
  font-size: 0.8em;
}

sup {
  position: relative;
  top: -0.5em;
  font-size: 0.8em;
}

blockquote {
  border-left: solid 0.75em #dddddd;
  padding: 1em 0 1em 1.5em;
  font-style: italic;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--dark-color);
  font-weight: 700;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
  color: inherit;
  text-decoration: none;
}

h2 {
  font-size: 1.5em;
}

h3 {
  font-size: 1.35em;
}

a {
  color: var(--active-color);
  text-decoration: underline;
}

a:hover {
  text-decoration: none;
}

br.clear {
  clear: both;
}

hr {
  border: 0;
  border-top: solid 1px #dddddd;
  height: 1px;
  margin: 2em 0 2em 0;
}

p,
ul,
ol,
dl,
table {
  margin-bottom: 2em;
}

/* Container */

.container {
  margin: 0 auto;
  max-width: 100%;
  width: 70em;
}

@media screen and (max-width: 1680px) {

  .container {
    width: 70em;
  }

}

@media screen and (max-width: 1280px) {

  .container {
    width: calc(100% - 60px);
  }

}

@media screen and (max-width: 980px) {

  .container {
    width: calc(100% - 80px);
  }

}

@media screen and (max-width: 736px) {

  .container {
    width: calc(100% - 40px);
  }

}

/* Row */

.row {
  display: flex;
  flex-wrap: wrap;
  box-sizing: border-box;
  align-items: stretch;
}

.row>* {
  box-sizing: border-box;
}

.row.gtr-uniform>*> :last-child {
  margin-bottom: 0;
}

.row.aln-left {
  justify-content: flex-start;
}

.row.aln-center {
  justify-content: center;
}

.row.aln-right {
  justify-content: flex-end;
}

.row.aln-top {
  align-items: flex-start;
}

.row.aln-middle {
  align-items: center;
}

.row.aln-bottom {
  align-items: flex-end;
}

.row>.imp {
  order: -1;
}

.row>.col-1 {
  width: 8.33333%;
}

.row>.off-1 {
  margin-left: 8.33333%;
}

.row>.col-2 {
  width: 16.66667%;
}

.row>.off-2 {
  margin-left: 16.66667%;
}

.row>.col-3 {
  width: 25%;
}

.row>.off-3 {
  margin-left: 25%;
}

.row>.col-4 {
  width: 33.33333%;
}

.row>.off-4 {
  margin-left: 33.33333%;
}

.row>.col-5 {
  width: 41.66667%;
}

.row>.off-5 {
  margin-left: 41.66667%;
}

.row>.col-6 {
  width: 50%;
}

.row>.off-6 {
  margin-left: 50%;
}

.row>.col-7 {
  width: 58.33333%;
}

.row>.off-7 {
  margin-left: 58.33333%;
}

.row>.col-8 {
  width: 66.66667%;
}

.row>.off-8 {
  margin-left: 66.66667%;
}

.row>.col-9 {
  width: 75%;
}

.row>.off-9 {
  margin-left: 75%;
}

.row>.col-10 {
  width: 83.33333%;
}

.row>.off-10 {
  margin-left: 83.33333%;
}

.row>.col-11 {
  width: 91.66667%;
}

.row>.off-11 {
  margin-left: 91.66667%;
}

.row>.col-12 {
  width: 100%;
}

.row>.off-12 {
  margin-left: 100%;
}

.row.gtr-0 {
  margin-top: 0px;
  margin-left: 0px;
}

.row.gtr-0>* {
  padding: 0px 0 0 0px;
}

.row.gtr-0.gtr-uniform {
  margin-top: 0px;
}

.row.gtr-0.gtr-uniform>* {
  padding-top: 0px;
}

.row.gtr-25 {
  margin-top: -12.5px;
  margin-left: -12.5px;
}

.row.gtr-25>* {
  padding: 12.5px 0 0 12.5px;
}

.row.gtr-25.gtr-uniform {
  margin-top: -12.5px;
}

.row.gtr-25.gtr-uniform>* {
  padding-top: 12.5px;
}

.row.gtr-50 {
  margin-top: -25px;
  margin-left: -25px;
}

.row.gtr-50>* {
  padding: 25px 0 0 25px;
}

.row.gtr-50.gtr-uniform {
  margin-top: -25px;
}

.row.gtr-50.gtr-uniform>* {
  padding-top: 25px;
}

.row {
  margin-top: -50px;
  margin-left: -50px;
}

.row>* {
  padding: 50px 0 0 50px;
}

.row.gtr-uniform {
  margin-top: -50px;
}

.row.gtr-uniform>* {
  padding-top: 50px;
}

.row.gtr-150 {
  margin-top: -75px;
  margin-left: -75px;
}

.row.gtr-150>* {
  padding: 75px 0 0 75px;
}

.row.gtr-150.gtr-uniform {
  margin-top: -75px;
}

.row.gtr-150.gtr-uniform>* {
  padding-top: 75px;
}

.row.gtr-200 {
  margin-top: -100px;
  margin-left: -100px;
}

.row.gtr-200>* {
  padding: 100px 0 0 100px;
}

.row.gtr-200.gtr-uniform {
  margin-top: -100px;
}

.row.gtr-200.gtr-uniform>* {
  padding-top: 100px;
}
/* ... */

